# Net-Game

./: CMakeLists.txt  README.md  game.c  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_private.c  game_private.h  game_random.c  game_sdl.c  game_sdl.h  game_solve.c  game_struct.h  game_test_awniang.c  game_test_famseye.c  game_test_qxie.c  game_text.c  game_tools.c  game_tools.h  main.c  sauvegarde_sans_optim.c
web/: demo.js  fichier_aux.js  fichier_html_aux.html  game.html  game.js  game.wasm  wrapper.c
web/make-game-web/: Makefile  demo.js  game.html  game.js  game.wasm
web/make-game-web/src/: wrapper.c
web/src/: game_aux.c  game_tools.c
